# SCC0270-redes-neurais

./: LICENSE  README.md  Trabalho_01_CNN.ipynb  Trabalho_02_Multimodalidade.ipynb  Trabalho_1.ipynb  pyproject.toml
posters/: Poster Rede Neurais - Final.pptx  s-9.html
